bagat si stocu si cantLivrata